initialisation fix?